<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SparkleShare</string>
    <string name="version">1.0</string>
    <string name="welcome_sparkleshare">Welcome to SparkleShare!</string>
    <string name="address">Address</string>
    <string name="host_hint">domain name or IP address</string>
    <string name="folder_name">Folder name:</string>
    <string name="folder_name_hint">/home/user/repositoryname.git</string>
    <string name="email_address">Email adress</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="link_code">Link code</string>
    <string name="submit">submit</string>
    <string name="please_wait">Please wait...</string>
    <string name="login_error">Sorry, but we weren\'t able to reach the host...</string>
    <string name="close">Close</string>
    <string name="add_project">Add project</string>
    <string name="adding_project">Adding project...</string>
    <string name="projects">SparkleShare</string>
    <string name="refresh">Refresh</string>
    <string name="upload">Upload</string>
    <string name="activity_not_found">Sorry, but it seems no installed App can handle this type of file.</string>
    <string name="scanner_app_not_found">Sorry, but we couldn\'t find a suitable barcode scanner on this device.</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="downloading">Downloading...</string>
    <string name="downloading_failed">Sorry, an error occurred while downloading this file.</string>
    <string name="hint_sparkleshare_dashboard">You can find this information on the SparkleShare Dashboard when you choose to link a new device.</string>
    <string name="invalid_qr_code">Invalid QR code</string>
        
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="info">About SparkleShare</string>
    <string name="sparkleshare_account">Account</string>
    <string name="settings_release_account">Forget account</string>
    <string name="settings_hide_files_folders">Show hidden files</string>
    <string name="sparkleshare_security">Security</string>
    <string name="settings_accept_all_certificates">Accept all SSL certificates</string>
    <string name="app_version">version</string>
    <string name="setup_account">Enter link code</string>
    <string name="scan_qrcode">Scan QR code</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="release_account_hint">Are you sure you want to forget about the current account?</string>
    <string name="release">Forget</string>
    <string name="cancel">Cancel</string>
    <string name="get_started">Get started by adding a project:</string>
    <string name="never_mind">Never mind</string>
    <string name="add">Add</string>
    <string name="copyright">Copyright © 2011</string>
    <string name="authors">Kai Wolf, Hylke Bons and others.</string>
    <string name="disclaimer">SparkleShare is Free and Open Source Software. You are free to use, modify, and redistribute it under the GNU General Public License version 3 or later.</string>
    <string name="open_file">Open</string>
    <string name="download_file">Download</string>
    <string name="redownload_file">Download again</string>
    <string name="delete_file">Delete from Phone</string>
</resources>
