<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dip">
	<TextView 
		android:id="@+id/text_server_address"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/server_address" />
	<EditText
		android:id="@+id/edit_server_address"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_below="@id/text_server_address"/>
	<TextView 
		android:id="@+id/text_folder_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/folder_name" 
		android:layout_below="@+id/edit_server_address" />
	<EditText
		android:id="@+id/edit_folder_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_below="@+id/text_folder_name" />
	<TextView
		android:id="@+id/text_email_address"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/email_address"
		android:layout_below="@+id/edit_folder_name" />
	<EditText
		android:id="@+id/edit_email_address"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_below="@+id/text_email_address" />
	<TextView
		android:id="@+id/text_password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/password"
		android:layout_below="@+id/edit_email_address" />
	<EditText
		android:id="@+id/edit_password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:inputType="textPassword"
		android:layout_below="@+id/text_password" />
</RelativeLayout>
